[metadata]
name = mozilla-location-python
version = 0.9.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/mozilla-location-wifi
description = Using Mozilla Location services, log location vs. time using WiFi or convert to KML.
keywords =
  wifi
  geolocation
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: System :: Networking
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  csv2kml.py
  MozLoc.py
install_requires =
  pandas
  requests

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
io =
  simplekml

[options.entry_points]
console_scripts =
  MozLoc = MozLoc:main
