[metadata]
name = mozloc
version = 1.4.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/mozilla-location-wifi
description = Using Mozilla Location services, log location vs. time using WiFi or convert to KML.
keywords =
  wifi
  geolocation
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3
  Topic :: System :: Networking
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  pandas
  requests
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
  types-requests
io =
  simplekml
